# concordance

./: .gitignore  README.md  pyproject.toml
concordance/: __init__.py  ahd.py  archaic.py  archive_metadata.py  arpabet.py  audio.py  calibration.py  classify.py  clean.py  cli.py  commons_search.py  config.py  db.py  deepdef.py  deepen.py  dictionary.py  difficulty.py  distractors.py  embed.py  extract.py  finalize.py  floor.py  judge.py  localdict.py  master.py  model.py  ngram.py  output.py  pipeline.py  propernouns.py  quizdef.py  refill.py  resolve.py  spaced_repetition.py  tokenize.py  usas.py  usas_domains.py  validity.py  validity_score.py  websearch.py  (+2 more)
samples/: passage.txt
scripts/: audit_filtering_fixes.py  backup_db.sh  fix_over_redacted_definitions.py  lookup_word.py  run_quizdef_backlog.sh  sweep_variant_rejects.py
tests/: test_ahd.py  test_archaic.py  test_archive_metadata.py  test_arpabet.py  test_audio.py  test_auth.py  test_browse_api.py  test_classify.py  test_db.py  test_deepdef.py  test_dictionary.py  test_difficulty.py  test_distractors.py  test_embed.py  test_filters.py  test_judge.py  test_localdict.py  test_master.py  test_model.py  test_ngram.py  test_pipeline.py  test_propernouns.py  test_quiz_api.py  test_quizdef.py  test_resolve.py  test_spaced_repetition.py  test_tokenize.py  test_usas.py  test_validity_score.py  test_websearch.py  test_wndomains.py
webapp/: dev.sh  serve.sh
webapp/backend/: auth.py  browse.py  main.py  quiz.py
webapp/frontend/: index.html  package-lock.json  package.json  vite.config.js
(+60 files in other folders)
